Fixed flicker

--- a/src/assets/styles/app/_content.scss
+++ b/src/assets/styles/app/_content.scss
@@ -189,9 +189,5 @@
             align-items: center;
             justify-content: between;
         }
-
-        &:last-child {
-            margin-bottom: 0;
-        }
     }
 }
